// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions/server reloadServer dispatches the correct action on successful server reload 1`] = `
Array [
  Object {
    "payload": Object {
      "type": "@flexget/server/SERVER_RELOAD",
    },
    "type": "LOADING_STATUS",
  },
  Object {
    "error": true,
    "meta": Object {
      "message": undefined,
    },
    "payload": [FetchError: invalid json response body at /api/server/manage reason: Unexpected end of JSON input],
    "type": "@flexget/server/SERVER_RELOAD",
  },
]
`;

exports[`actions/server reloadServer dispatches the correct action on unsuccessful server reload 1`] = `
Array [
  Object {
    "payload": Object {
      "type": "@flexget/server/SERVER_RELOAD",
    },
    "type": "LOADING_STATUS",
  },
  Object {
    "error": true,
    "meta": Object {
      "message": undefined,
    },
    "payload": [Error: error],
    "type": "@flexget/server/SERVER_RELOAD",
  },
]
`;

exports[`actions/server shutdownServer dispatches the correct action on successful server shutdown 1`] = `
Array [
  Object {
    "payload": Object {
      "type": "@flexget/server/SERVER_SHUTDOWN",
    },
    "type": "LOADING_STATUS",
  },
  Object {
    "error": true,
    "meta": Object {
      "message": undefined,
    },
    "payload": [FetchError: invalid json response body at /api/server/manage reason: Unexpected end of JSON input],
    "type": "@flexget/server/SERVER_SHUTDOWN",
  },
]
`;

exports[`actions/server shutdownServer dispatches the correct action on unsuccessful server shutdown 1`] = `
Array [
  Object {
    "payload": Object {
      "type": "@flexget/server/SERVER_SHUTDOWN",
    },
    "type": "LOADING_STATUS",
  },
  Object {
    "error": true,
    "meta": Object {
      "message": undefined,
    },
    "payload": [Error: error],
    "type": "@flexget/server/SERVER_SHUTDOWN",
  },
]
`;
